--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,79 @@
     font-family: sans-serif;
 }
 
-.App {
+body {
     margin: 0;
     padding: 0;
+    background-color: darkgreen;
+}
+
+#root {
+    height: 100%;
+}
+
+.App {
+    margin: 0;
+    padding-top: 200px;
+    height: 100%;
+}
+
+#quote-box {
+    background-color: white;    
+    width: 600px;
+    margin: auto;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: darkgreen;
+}
+
+#text {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0;
+}
+
+#author {
+    font-size: 1.2rem;
+    margin-left: auto;
+    padding-right: 20px;
+}
+
+.buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.4rem;
+    padding: 20px;
+    vertical-align: baseline;
+}
+
+a {
+    color: white;
+    padding: 0;
+    text-align: center;
+}
+
+.each-tag {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: darkgreen;
+    text-align: center;
+    padding: 5px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+#new-quote {
+    height: 40px;
+    width: 100px;
+    background-color: darkgreen;
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    font-size: 1rem;
+    
 }
